--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "Gustavo Henrique",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "prisma": "^5.1.0",
     "ts-node-dev": "^2.0.0",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
