--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "npm": "^9.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
