--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "npm": "^9.8.1"
+    "node": "^20.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "npm": "^9.8.1",
     "prisma": "^5.1.1",
     "ts-node-dev": "^2.0.0",
     "tsup": "^7.1.0",
