--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "ts-node-dev --transpile-only src/app.ts",
     "build": "tsup src"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "Gustavo Henrique",
   "license": "ISC",
   "dependencies": {
@@ -14,8 +17,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "node": "^20.5.0"
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
