--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://leticia10:322020Ar@server-limpean06.mysql.database.azure.com:3306/db_limpean_2023"
+DATABASE_URL="mysql://gustavo:322020Ar@server-limpean.mysql.database.azure.com:3306/db_limpean_2023"
 PORT = 8080
