Finalizado automatização dos insets

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 
 # DATABASE_URL="mysql://gustavo:322020Ar@server-limpean.mysql.database.azure.com:3306/db_limpean_2023"
 
-DATABASE_URL="mysql://root:12345678@localhost:3306/db_limpean_2023"
+DATABASE_URL="mysql://root:135796Ar@localhost:3306/db_limpean_2023"
 
 PORT = 8080
